<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D1D0CE"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    android:weightSum="1">




        <TextView android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome"
            android:textSize="35sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


        <ImageView
            android:layout_below="@id/welcome"
            android:contentDescription="@string/imgDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_andr_client"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">


        <EditText
        android:id="@+id/username"
            android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:background="@drawable/edit_text_background"
            android:drawableStart="@mipmap/user"
        android:drawableLeft="@mipmap/user"
        android:focusable="true"
        android:textColorHint="#bbbbbb" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@mipmap/password"
        android:drawableLeft="@mipmap/password"
        android:focusable="true"
        android:textColorHint="#bbbbbb"/>


        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="Login"
            android:background="@drawable/buttondraw" />

        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">




                <TextView android:text="@string/noAcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noaccountmsg"
                    android:textSize="20sp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:layout_marginRight="20dp"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_weight="2"
                    android:id="@+id/registerbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="12sp"
                    android:background="@drawable/submitbutton"
                    android:shadowRadius="8"
                    android:onClick="Register"/>
                </LinearLayout>




    </LinearLayout>



</RelativeLayout>
