<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D1D0CE"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register"
    android:weightSum="1">

    <TextView android:text="@string/registermsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/regview"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/linearLayout"
        android:layout_below="@id/regview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="87dp">


        <EditText android:id="@+id/register_username"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/username"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@mipmap/user"
            android:drawableLeft="@mipmap/user"
            android:focusable="true"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@mipmap/password"
            android:drawableLeft="@mipmap/password"
            android:focusable="true"
            android:textColorHint="#bbbbbb"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/submit"
            android:onClick="Submit"
            android:layout_weight="0.04"
            android:background="@drawable/buttondraw"/>

    </LinearLayout>

</RelativeLayout>