<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StatusFragment">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_gravity="center" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/table_client_status"
                android:gravity="center_horizontal"
                android:textAlignment="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/client_status_header"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/table_header_client_id"
                        android:id="@+id/table_textView1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/table_header_client_status"
                        android:id="@+id/table_textView2"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/table_header_client_accept"
                        android:id="@+id/table_textView3"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/table_header_client_decline"
                        android:id="@+id/table_textView4"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </HorizontalScrollView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="add client"
        android:id="@+id/addclientbutton"
        android:layout_gravity="center_horizontal|bottom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Online"
        android:id="@+id/setClientOnlinebutton"
        android:layout_gravity="left|bottom" />
</FrameLayout>
